# aiida-muon

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  pyproject.toml
.cla/version1/: CLA.md  signatures.json
.github/workflows/: ci.yml  cla.yml  deploy.yml
aiida_muon/: __init__.py
aiida_muon/utils/: clustering.py  export_findmuon.py  hubbard.py  magnetism.py  manage_new_structure.py  niche.py  sites_supercells.py
aiida_muon/workflows/: find_muon.py  niche.py  utils.py
docs/: .gitignore  01-FindMuonWorkChain.ipynb  README.md  builder.ipynb  myst.yml  useful_pre_post_processing.ipynb
examples/: LaCoPO_run_builder_query.ipynb  run_example_si_fe_mno.py
examples/data/: 0.45_La2NiO4.mcif  1000043_CaF2.cif  CsV3Sb5_130K_1x1x1Parent.cif  Fe_bcc.mcif  LaCoPO_bcs_file_26735.mcif  LiF.cif  LiF_allsites.cif
tests/: conftest.py  test_find_muon.py
